--- a/notebooks/unit4/unit4.ipynb
+++ b/notebooks/unit4/unit4.ipynb
@@ -476,6 +476,8 @@
         "    def __init__(self, s_size, a_size, h_size):\n",
         "        super(Policy, self).__init__()\n",
         "        # Create two fully connected layers\n",
+        "        self.fc1 = nn.Linear(s_size,h_size)\n",
+        "        self.fc2 = nn.Linear(h_size,a_size)\n",
         "\n",
         "\n",
         "\n",
@@ -484,9 +486,10 @@
         "        # state goes to fc1 then we apply ReLU activation function\n",
         "\n",
         "        # fc1 outputs goes to fc2\n",
+        "        x = self.fc2(F.relu(self.fc1(x)))\n",
         "\n",
         "        # We output the softmax\n",
-        "\n",
+        "        return F.softmax(x,dim=1)\n",
         "    def act(self, state):\n",
         "        \"\"\"\n",
         "        Given a state, take action\n",
@@ -494,7 +497,7 @@
         "        state = torch.from_numpy(state).float().unsqueeze(0).to(device)\n",
         "        probs = self.forward(state).cpu()\n",
         "        m = Categorical(probs)\n",
-        "        action = np.argmax(m)\n",
+        "        action = m.sample()\n",
         "        return action.item(), m.log_prob(action)"
       ]
     },
@@ -690,12 +693,12 @@
         "    for i_episode in range(1, n_training_episodes+1):\n",
         "        saved_log_probs = []\n",
         "        rewards = []\n",
-        "        state = # TODO: reset the environment\n",
+        "        state = env.reset()\n",
         "        # Line 4 of pseudocode\n",
         "        for t in range(max_t):\n",
-        "            action, log_prob = # TODO get the action\n",
+        "            action, log_prob = policy.act(state)# TODO get the action\n",
         "            saved_log_probs.append(log_prob)\n",
-        "            state, reward, done, _ = # TODO: take an env step\n",
+        "            state, reward, done, _ = env.step(action)# TODO: take an env step\n",
         "            rewards.append(reward)\n",
         "            if done:\n",
         "                break\n",
@@ -736,7 +739,7 @@
         "        ## a normal python list would instead require O(N) to do this.\n",
         "        for t in range(n_steps)[::-1]:\n",
         "            disc_return_t = (returns[0] if len(returns)>0 else 0)\n",
-        "            returns.appendleft(    ) # TODO: complete here\n",
+        "            returns.appendleft(  gamma*disc_return_t+rewards[t]  ) # TODO: complete here\n",
         "\n",
         "        ## standardization of the returns is employed to make training more stable\n",
         "        eps = np.finfo(np.float32).eps.item()\n",
@@ -748,6 +751,7 @@
         "\n",
         "        # Line 7:\n",
         "        policy_loss = []\n",
+        "\n",
         "        for log_prob, disc_return in zip(saved_log_probs, returns):\n",
         "            policy_loss.append(-log_prob * disc_return)\n",
         "        policy_loss = torch.cat(policy_loss).sum()\n",
@@ -1268,7 +1272,7 @@
       },
       "outputs": [],
       "source": [
-        "repo_id = \"\" #TODO Define your repo id {username/Reinforce-{model-id}}\n",
+        "repo_id = \"hahaqwqw/Reinforce-CartPole\" #TODO Define your repo id {username/Reinforce-{model-id}}\n",
         "push_to_hub(repo_id,\n",
         "                cartpole_policy, # The model we want to save\n",
         "                cartpole_hyperparameters, # Hyperparameters\n",
@@ -1386,9 +1390,15 @@
         "    def __init__(self, s_size, a_size, h_size):\n",
         "        super(Policy, self).__init__()\n",
         "        # Define the three layers here\n",
+        "        self.fc1 = nn.Linear(s_size,h_size)\n",
+        "        self.fc2 = nn.Linear(h_size,h_size*2)\n",
+        "        self.fc3 = nn.Linear(h_size*2,a_size)\n",
         "\n",
         "    def forward(self, x):\n",
         "        # Define the forward process here\n",
+        "        x = F.relu(self.fc1(x))\n",
+        "        x = F.relu(self.fc2(x))\n",
+        "        x = self.fc3(x)\n",
         "        return F.softmax(x, dim=1)\n",
         "\n",
         "    def act(self, state):\n",
