--- a/notebooks/unit6/unit6.ipynb
+++ b/notebooks/unit6/unit6.ipynb
@@ -426,7 +426,7 @@
         "env = make_vec_env(env_id, n_envs=4)\n",
         "\n",
         "# Adding this wrapper to normalize the observation and the reward\n",
-        "env = # TODO: Add the wrapper"
+        "env = VecNormalize(env,norm_obs=True,norm_reward=True,clip_obs=10.0)"
       ],
       "metadata": {
         "id": "1RsDtHHAQ9Ie"
