--- a/notebooks/unit6/unit6.ipynb
+++ b/notebooks/unit6/unit6.ipynb
@@ -472,7 +472,7 @@
     {
       "cell_type": "code",
       "source": [
-        "model = # Create the A2C model and try to find the best parameters"
+        "model = A2C(\"MultiInputPolicy\", env, verbose=1) # Create the A2C model and try to find the best parameters"
       ],
       "metadata": {
         "id": "vR3T4qFt164I"
@@ -673,7 +673,7 @@
         "    model_architecture=\"A2C\",\n",
         "    env_id=env_id,\n",
         "    eval_env=eval_env,\n",
-        "    repo_id=f\"ThomasSimonini/a2c-{env_id}\", # Change the username\n",
+        "    repo_id=f\"hahaqwqw/a2c-{env_id}\", # Change the username\n",
         "    commit_message=\"Initial commit\",\n",
         ")"
       ],
